Update 003 multi-layer NN

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 .ipynb_checkpoints
 
 # solutions
-20170425/solutions
-
-20170425/example_codes/004*
-20170425/example_codes/005*
+20170425/solutions/002_Single_Layer_NN.ipynb
+20170425/solutions/003_Multi_Layer_NN.ipynb
+20170425/solutions/004_CNN.ipynb
