Add comment on 004_CNN

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 .ipynb_checkpoints
 
 # solutions
-20170425/solutions/002_Single_Layer_NN.ipynb
-20170425/solutions/003_Multi_Layer_NN.ipynb
-20170425/solutions/004_CNN.ipynb
+week_1/solution/002_Single_layer_NN.ipynb
+week_1/solution/003_Multi_layer_NN.ipynb
+week_1/solution/004_CNN.ipynb
