Add solutions for week_1/002,003,004

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,4 @@
 .ipynb_checkpoints
 
 # solutions
-week_1/solution/002_Single_layer_NN.ipynb
-week_1/solution/003_Multi_layer_NN.ipynb
-week_1/solution/004_CNN.ipynb
+#week_1/solution/004_CNN.ipynb
