--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 #week_1/solution/004_CNN.ipynb
 
 # data and log and checkpoints
-*/data/*
-*/logs/*
-*/checkpoints/*
+*/data*
+*/logs*
+*/checkpoints*
+*/results*
