--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # ipython checkpoints
 .ipynb_checkpoints
 
+# compiled python code
+*.pyc
+
 # solutions
-#week_1/solution/004_CNN.ipynb
 
 # data and log and checkpoints
 */data*
